add the possibility to retrieve games for a given season
